[workspace]
members = [
    ".",
    "ops-core",
]

[package]
name = "ops"
description = "Adds operational endpoints to your application"
repository = "https://github.com/utilitywarehouse/rust-ops"
version = "0.4.0"
authors = ["rustaceans <rustaceans@utilitywarehouse.co.uk>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/ops/"

[dependencies]
futures-util = "0.3"
hyper = "0.13"
once_cell = "1"
ops-core = "0.2"
prometheus = { version = "0.9", default-features = false, features = ["process"] }
serde_json = { version = "1" }

[dev-dependencies]
tokio = { version = "0.2", features = ["full"] }
